# SciLib

./: .gitignore  CMakeLists.txt  README.md  main.cpp
headers/: fileSys.h  scilib.h
include/: fileSys.h  interpreter.h  scilib.h  scilibUtils.h
src/: fileSys.hpp  interpreter.hpp  scilib.hpp  scilibUtils.hpp
test/: scilib  scilib_test  test_Matrix2d.cpp  test_scilib.cpp
